# CupolaCore

./: .gitignore  BLUEPRINT.md  Cargo.toml  Cargo.toml.bak-20260205-220624  LICENSE
contracts/v1/: EPI_PACK_SPEC.md  README.md  epi.attestation.v1.schema.json  epi.claims.v1.schema.json  epi.decision_pack.v1.schema.json  epi.drift_report.v1.schema.json  epi.evidence_pack.v1.schema.json  epi.runlog.v1.schema.json  epi.seal.v1.schema.json  epi.signoff.v1.schema.json  epi.source_extract.v1.schema.json
demo_packs/v0/demo_pack/: epi.attestation.v1.json  epi.claims.v1.json  epi.decision_pack.v1.json  epi.drift_report.v1.json  epi.evidence_pack.v1.json  epi.runlog.v1.json  epi.seal.v1.json  epi.signoff.v1.json
docs/: DEMO_SCRIPT.md
libs/cupola-cas/: Cargo.toml
libs/cupola-cas/src/: lib.rs  lib.rs.bak-20260205-220933  lib.rs.bak-20260205-221230
libs/cupola-cli/: Cargo.toml
libs/cupola-cli/src/: main.rs
libs/cupola-cli/tests/: golden_cli_behavior.rs
libs/cupola-core/: Cargo.toml  Cargo.toml.bak-20260205-221222
libs/cupola-core/src/: lib.rs
libs/cupola-db/: Cargo.toml
libs/cupola-db/migrations/: 001_initial_schema.sql  001_initial_schema.sql.bak_20260206-094222  002_ingestion_journal.sql  003_unique_chunk_per_version.sql  004_chunk_ordinal_multi_chunk.sql  005_fix_multi_chunk_ordinal_and_indexes.sql  006_schema_invariants.sql
libs/cupola-db/src/: lib.rs  lib.rs.bak  lib.rs.bak_20260206-094131  migrations.rs
libs/cupola-indexer/: Cargo.toml  Cargo.toml.bak-20260205-221222
libs/cupola-indexer/src/: journal.rs  lib.rs  pipeline.rs
libs/cupola-indexer/src/stages/: hash.rs  mod.rs  parse.rs
libs/cupola-protocol/: Cargo.toml
libs/cupola-protocol/src/: lib.rs
libs/cupola-search/: Cargo.toml
libs/cupola-search/src/: lib.rs
libs/epi-cli/: Cargo.toml
libs/epi-cli/src/: main.rs
libs/epi-cli/tests/: cli_smoke.rs
