[package]
name = "cupola-core"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }

cupola-db = { path = "../cupola-db" }
cupola-cas = { path = "../cupola-cas" }
cupola-protocol = { path = "../cupola-protocol" }

[dev-dependencies]
tempfile = "3"


