[package]
name = "cupola-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
walkdir = "2"
unicase = "2"
async-trait = "0.1"

cupola-core = { path = "../cupola-core" }
cupola-db = { path = "../cupola-db" }
cupola-cas = { path = "../cupola-cas" }

[dev-dependencies]
tempfile = "3"



