[package]
name = "cupola-search"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tantivy = "0.22"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["fs"] }

cupola-cas = { path = "../cupola-cas" }

[dev-dependencies]
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
cupola-db = { path = "../cupola-db" }
